--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,47 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+	compileSdkVersion 20
+	buildToolsVersion "20.0.0"
 
-    defaultConfig {
-        applicationId "com.liferay.alerts"
-        minSdkVersion 14
-        targetSdkVersion 20
-        versionCode 1
-        versionName "1.0"
-    }
+	defaultConfig {
+		applicationId "com.liferay.alerts"
+		minSdkVersion 14
+		targetSdkVersion 20
+		versionCode 1
+		versionName "1.0"
+	}
+
+	packagingOptions {
+		exclude 'META-INF/LICENSE'
+		exclude 'META-INF/NOTICE'
+	}
+}
+
+repositories {
+	maven {
+		url 'https://repository.liferay.com/nexus/content/groups/liferay-ce'
+	}
+}
+
+configurations {
+	formatter
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:4.2.42'
-    compile 'com.android.support:appcompat-v7:20.+'
+	compile group: 'com.android.support', name: 'appcompat-v7', version: '20.+'
+	compile group: 'com.google.android.gms', name: 'play-services', version: '4.2.42'
+	compile group: 'com.liferay.mobile', name: 'liferay-android-sdk', version: '6.2.0.5'
+
+	formatter group: 'com.liferay.portal', name: 'portal-impl', version: '6.2.0-ga1'
+	formatter group: 'com.liferay.portal', name: 'portal-service', version: '6.2.0-ga1'
+	formatter group: 'com.liferay.portal', name: 'util-java', version: '6.2.0-ga1'
+	formatter group: 'dom4j', name: 'dom4j', version: '1.6.1'
+	formatter group: 'org.apache.ant', name: 'ant', version: '1.8.2'
+}
+
+task format(type: JavaExec) {
+	main = 'com.liferay.portal.tools.sourceformatter.SourceFormatter'
+	classpath = configurations.formatter
+	workingDir = 'src'
 }
