--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.liferay.alerts" >
 
+	<permission android:name="com.liferay.alerts.permission.C2D_MESSAGE"
+		android:protectionLevel="signature" />
+
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	<uses-permission android:name="com.liferay.alerts.permission.C2D_MESSAGE" />
+
 	<application
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
@@ -17,5 +25,21 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+
+		<receiver
+			android:name=".receiver.PushNotificationReceiver"
+			android:permission="com.google.android.c2dm.permission.SEND">
+
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				<category android:name="com.liferay.alerts" />
+			</intent-filter>
+		</receiver>
+
+		<service android:name=".service.PushNotificationService" />
+
+		<meta-data
+			android:name="com.google.android.gms.version"
+			android:value="@integer/google_play_services_version" />
 	</application>
 </manifest>
