--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,20 +2,38 @@ apply plugin: 'com.android.application'
 
 android {
 	compileSdkVersion 20
-	buildToolsVersion "20.0.0"
+	buildToolsVersion '20.0.0'
 
 	defaultConfig {
-		applicationId "com.liferay.alerts"
+		applicationId 'com.liferay.alerts'
 		minSdkVersion 14
 		targetSdkVersion 20
 		versionCode 1
-		versionName "1.0"
+		versionName '1.0'
 	}
 
 	packagingOptions {
 		exclude 'META-INF/LICENSE'
 		exclude 'META-INF/NOTICE'
 	}
+
+	signingConfigs {
+		release {
+		}
+	}
+
+	buildTypes {
+		release {
+			signingConfig signingConfigs.release
+		}
+	}
+}
+
+if (hasProperty('password')) {
+	android.signingConfigs.release.storeFile file('../../alerts-release.keystore')
+	android.signingConfigs.release.storePassword password
+	android.signingConfigs.release.keyAlias 'alerts'
+	android.signingConfigs.release.keyPassword password
 }
 
 repositories {
