--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 		android:theme="@style/DefaultTheme">
 
 		<activity
-			android:name=".activity.SignInActivity"
+			android:name=".activity.MainActivity"
 			android:label="@string/app_name"
 			android:windowSoftInputMode="adjustResize|stateVisible">
 
