--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 	compile group: 'com.android.support', name: 'appcompat-v7', version: '20.+'
 	compile group: 'com.google.android.gms', name: 'play-services', version: '4.2.42'
 	compile group: 'com.liferay.mobile', name: 'liferay-android-sdk', version: '6.2.0.6'
+	compile group: 'com.squareup.picasso', name: 'picasso', version: '2.3.3'
 
 	formatter group: 'com.liferay.portal', name: 'portal-impl', version: '6.2.0-ga1'
 	formatter group: 'com.liferay.portal', name: 'portal-service', version: '6.2.0-ga1'
