--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 	<uses-permission android:name="com.liferay.alerts.permission.C2D_MESSAGE" />
 
 	<application
-		android:icon="@drawable/ic_launcher"
+		android:icon="@drawable/launcher"
 		android:label="@string/app_name"
 		android:theme="@style/DefaultTheme">
 
