--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 		minSdkVersion 16
 		targetSdkVersion 20
 		versionCode 4
-		versionName '1.0'
+		versionName 'version 0.1.0'
 	}
 
 	packagingOptions {
