--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,14 @@
 			</intent-filter>
 		</receiver>
 
+		<receiver android:name=".receiver.WearableVoteReceiver"
+			android:exported="false">
+
+			<intent-filter>
+				<action android:name="ACTION_VOTE" />
+			</intent-filter>
+		</receiver>
+
 		<service android:name=".service.PushNotificationService" />
 
 		<meta-data
